objects/ScCollection_Letter_Template__c.object
<CustomObject>
    <fields>
        <fullName>Letter_Unique_Name__c</fullName>
        <externalId>true</externalId>
        <label>Letter Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <description>Used when migrating records from Production to Sandboxes. Will be blank in Production, but when inserting these records into Sandbox we insert the Id from Prd into this field. This is our logical key for setting this Record in Lookups in other objects.</description>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Aggregator_Name__c</fullName>
        <label>Aggregator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Application__c</fullName>
        <label>Application</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Letter_Sub_Type__c</fullName>
        <label>Letter Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>FULL PAYMENT MORATORIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDUCE PAYMENT MORATORIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO CAPACITY TO PAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSUFFICIENT INFORMATION TO ASSESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WITHDRAWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT CAPPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLETED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINTAIN AND CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIME TO SELL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Letter_Type__c</fullName>
        <label>Letter Type</label>
        <picklist>
            <picklistValues>
                <fullName>HARDSHIP APPROVAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDSHIP BROKEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDSHIP DECLINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDSHIP REQUEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDSHIP FINALISED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDSHIP REQUESTED MORE DOCUMENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARDSHIP REQUESTED</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Process__c</fullName>
        <label>Process</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Signatory_Name__c</fullName>
        <label>Signatory Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Signatory__c</fullName>
        <label>Signatory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Source_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System</label>
        <referenceTo>collect__Source_System__c</referenceTo>
        <relationshipName>Letter_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Letter Template Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Source_System__c</columns>
        <columns>ScCollection_Is_Active__c</columns>
        <columns>ScCollection_Aggregator_Name__c</columns>
        <columns>ScCollection_Application__c</columns>
        <columns>ScCollection_Category__c</columns>
        <columns>ScCollection_Country_Code__c</columns>
        <columns>ScCollection_Process__c</columns>
        <columns>ScCollection_Signatory__c</columns>
        <columns>ScCollection_Signatory_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Hardship</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Source_System__c</columns>
        <columns>ScCollection_Letter_Type__c</columns>
        <columns>ScCollection_Letter_Sub_Type__c</columns>
        <columns>Letter_Unique_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ScCollection_Letter_Template__c.ScCollection_Hardship</value>
        </filters>
        <label>All_Hardship</label>
    </listViews>
    <nameField>
        <label>Letter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Templates Configurations</pluralLabel>
    <recordTypes>
        <fullName>ScCollection_Hardship</fullName>
        <active>true</active>
        <label>Hardship</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>